<resources>
    <string name="app_name">ABC Job Sourcing</string>
    <string name="cName">Contractor\'s Name</string>
    <string-array name="cRole">
        <item>Role</item>
        <item>Programmer</item>
        <item>Analyst</item>
        <item>Tester</item>
    </string-array>
    <string name="nDep">No. of Dependents</string>
    <string name="nHrs">No. Hours worked</string>
    
    <string name="gSal">Php 0.00</string>
    <string name="nSal">Php 0.00</string>

    <string name="btnSubmit">Submit</string>
    <string name="btnClear">Clear</string>
</resources>