<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06B2C8"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cName"
        android:layout_width="357dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Contractor's Name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/cName" />

    <Spinner
        android:id="@+id/cRole"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="357dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFFFFF"
        android:entries="@array/cRole"
        android:textAlignment="viewStart"
        android:textDirection="anyRtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cName" />

    <EditText
        android:id="@+id/nDep"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="No. of Dependents"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cRole"
        tools:text="@string/nDep" />

    <EditText
        android:id="@+id/nHrs"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="No. Hours Worked"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cRole"
        tools:text="@string/nHrs" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="379dp"
        android:layout_height="164dp"
        android:layout_marginBottom="192dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cRole"
        app:layout_constraintVertical_bias="0.876"
        app:srcCompat="@drawable/money" />

    <TextView
        android:id="@+id/result1"
        android:layout_width="153dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/gSal"
        android:layout_width="341dp"
        android:layout_height="31dp"
        android:layout_marginTop="68dp"
        android:text="Php 0.00"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:text="@string/gSal" />

    <TextView
        android:id="@+id/nSal"
        android:layout_width="342dp"
        android:layout_height="30dp"
        android:layout_marginTop="112dp"
        android:text="Php 0.00"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:text="@string/nSal" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="24dp"
        android:text="Results"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FED431"
        android:text="Submit"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nDep"
        tools:text="@string/btnSubmit" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="95dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:backgroundTint="#D1D2D4"
        android:text="CLEAR"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nHrs"
        tools:text="@string/btnClear" />

</androidx.constraintlayout.widget.ConstraintLayout>